# Loop

./: .gitignore  CHANGELOG.md  README.md  SESSION_SUMMARY.md  SPEC.md  __init__.py  cli.py  constants.py  demo.py  pyproject.toml  reader.py  test_looplib.py  validator.py  writer.py
.github/workflows/: tests.yml
agents/jarvis_dashboard/: SPEC.md  index.html
autonomous/: README.md  autonomous_runner.py  away_mode.py  claude_tmux.sh
finance/: ACCOUNTS.md  BUSINESS_STRUCTURE.md  MASTER_PLAN.md  PORTFOLIO.md  STAKING.md  WATCHLIST.md
freelance/: LEADS.md  OUTREACH.md  PROFILE.md  UPWORK_GUIDE.md
logs/: github-setup-2026-03-31.md  orretcrypt-build-2026-03-31.md  orretter-research-2026-03-31.md  session-2026-03-31.md
looplib/: __init__.py  __main__.py  basic_usage.py  cli.py  constants.py  packer.py  patcher.py  reader.py  streaming.py  test_looplib.py  utils.py  validator.py  writer.py
looplib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/: PAYMENTS.md  QUICK_WINS.md  SAAS_IDEAS.md  SAAS_PLAYBOOK.md  TASKS.md
projects/llm-proxy/: RAPIDAPI.md  README.md  app.py  requirements.txt
projects/orretcrypt/: .gitignore  GITHUB_PUSH.sh  LICENSE  README.md  SPEC.md  __init__.py  _orretcrypt_core.py  index.html  install.sh  orretcrypt.py  pyproject.toml  requirements.txt
projects/orretcrypt/orretcrypt/: __main__.py
projects/prompt-templates/: CODE_REVIEW.md  README.md
tests/: test_looplib.py
tools/orretstudio/: index.html
