[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orretcrypt"
version = "1.0.0"
description = "Post-quantum encryption tool — ML-KEM-768 + AES-256-GCM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kyber-py>=1.2.0",
    "cryptography>=43.0.0",
]
authors = [
    { name = "Orretter", email = "orretter@orret.systems" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Security :: Cryptography",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
keywords = ["cryptography", "post-quantum", "encryption", "kyber", "ml-kem", "pqc"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
orretcrypt = "orretcrypt.cli:main"

[project.urls]
Homepage = "https://github.com/orretter/orretcrypt"
Repository = "https://github.com/orretter/orretcrypt"

[tool.setuptools.packages.find]
where = ["."]
include = ["orretcrypt*"]
